[project]
name = "image-tagging"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyterlab>=4.3.2",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "pillow>=11.0.0",
    "plotly>=5.24.1",
    "requests>=2.32.3",
    "streamlit>=1.40.2",
    "tqdm>=4.67.1",
]
